--- a/package.json
+++ b/package.json
@@ -10,21 +10,32 @@
     "build-ts": "tsc",
     "clean": "rimraf ./build",
     "watch-node": "nodemon -r dotenv/config build/server.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "migration:create": "npx typeorm migration:create process.env.path",
+    "migration:run": "ts-node -r dotenv/config ./node_modules/typeorm/cli.js migration:run --dataSource ./src/database/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.3.3",
+    "dotenv": "^16.3.1",
     "nodemon": "^3.0.2",
-    "dotenv": "^16.3.1"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "axios": "^1.6.5",
-    "bcrypt": "^5.1.1"
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "pg": "^8.11.3",
+    "pg-hstore": "^2.3.4",
+    "reflect-metadata": "^0.2.1",
+    "tedis": "^0.1.12",
+    "typeorm": "^0.3.20"
   }
 }
