--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,9 @@
     "forceConsistentCasingInFileNames": true,
     "strictNullChecks": true,
     "noImplicitAny": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
+    "strictPropertyInitialization": false,
     "strict": true,
     "paths": {
       "*": ["node_modules/*", "src/types/*"]
